--- a/Project_Proposal_EDA.ipynb
+++ b/Project_Proposal_EDA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNn4fnBWDtQPZSc7/jkrc89",
+      "authorship_tag": "ABX9TyPha6Ztq/k+ahrKFNgS4enm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,20 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/hawa1983/DATA602Project/blob/main/Project_Proposal_EDA.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Team Members**\n",
+        "\n",
+        "\n",
+        "*   Souleymane Doumbia\n",
+        "*   Fomba Kassoh\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "EgoagRWqAPSP"
+      }
     },
     {
       "cell_type": "markdown",
